add the info about Partial Derivative

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -106,13 +106,21 @@
     "1. In the formula for $f$ put the specific values for all the coordinates except $k$-th. that is we put the follwing $(n-1)$ values such as the first coordinate of the point $x$, the second coordinate of the point $x$ and so on, all the except $k$-th coordinate of the point $x$. The resulting function from one variable (from the variable $x_k$).  \n",
     "2. Calculate the derivative from the resulting function from one variable.\n",
     "3. Find the derivative in the specific point. That is put the $k$-th coordinate of the point $x$.  \n",
-    "The obtained function in the Point #1 describes behaviour of the $f$ on the straight line, passing through the point $x$ and the parallel $k$-th coordinate axis. That is we fix all the coordinates except $k$-th and let it change only $k$-th coordinate. The obtained equation in the point #1 is called $limitation$ of the function $f$ to this straight line. Found Partial Derivative describes growth rate of the function $f$ along this straight line in the point $x$.  \n",
+    "The obtained function in the Point #1 describes behaviour of the $f$ on the straight line, passing through the point $x$ and the parallel $k$-th coordinate axis. That is we fix all the coordinates except $k$-th and let it change only $k$-th coordinate. The obtained equation in the point #1 is called $limitation$ of the function $f$ to this straight line. Found Partial Derivative describes growth rate of the function $f$ along this straight line in the point $x$. \n",
+    "\n",
     "**Theorem**.  \n",
     "Let be a function $f$ from $n$ variables. Let be Differential of $f$ in the point $x$ $d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=$ $a_{1} \\Delta x_{1}+\\cdots+a_{n} \\Delta x_{n}$ and partial derivatives $\\frac{\\partial f}{\\partial x_{1}}, \\ldots, \\frac{\\partial f}{\\partial x_{n}}$. Then  \n",
     "$a_{1}=\\frac{\\partial f}{\\partial x_{1}}, \\ldots, a_{n}=\\frac{\\partial f}{\\partial x_{n}} .$  \n",
     "That is for any $j=1,...,n$ value $a_j$ is equal partial derivative of function $f$ of $j$-th coordinate calculated in the point $x$. In other words:  \n",
     "$d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=\\frac{\\partial f}{\\partial x_{1}} \\Delta x_{1}+\\frac{\\partial f}{\\partial x_{2}} \\Delta x_{2}+\\cdots+\\frac{\\partial f}{\\partial x_{n}} \\Delta x_{n}$,  \n",
-    "where all the partial derivatives are calculated in the point $x$."
+    "where all the partial derivatives are calculated in the point $x$.  \n",
+    "\n",
+    "**Theorem**.  \n",
+    "Let be a function $f$ from $n$ variables. Let $f$ is defined in a neighborhood of the point $x$, and in the point $x$ $f$ has partial derivatives of all the coordinates. Then $x$ can be the point of a local mimimum or a local maximum only if all the partial derivatives are equal to zero.  \n",
+    "\n",
+    "**Consequence of the Theorem**.  \n",
+    "Let in the point $x$ there is Differential $d_x f$. The point $x$ can be the point of a local minimum or a local maximum only if $d_x f=0$ (that is $d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=0$ for any $\\Delta x_{1}, \\ldots, \\Delta x_{n}$).  \n",
+    "We can interpret $\\frac{\\partial f}{\\partial x_{k}}$ as the function, that maps any point $x \\in \\mathbb{R^n}$ in the partial derivative $\\frac{\\partial f}{\\partial x_{k}}$ calculated in the point (for such $x \\in \\mathbb{R}^{n}$, in which $\\frac{\\partial f}{\\partial x_{k}}$ is defined."
    ]
   }
  ],
