add the final info about Partial Derivative

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -120,7 +120,15 @@
     "\n",
     "**Consequence of the Theorem**.  \n",
     "Let in the point $x$ there is Differential $d_x f$. The point $x$ can be the point of a local minimum or a local maximum only if $d_x f=0$ (that is $d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=0$ for any $\\Delta x_{1}, \\ldots, \\Delta x_{n}$).  \n",
-    "We can interpret $\\frac{\\partial f}{\\partial x_{k}}$ as the function, that maps any point $x \\in \\mathbb{R^n}$ in the partial derivative $\\frac{\\partial f}{\\partial x_{k}}$ calculated in the point (for such $x \\in \\mathbb{R}^{n}$, in which $\\frac{\\partial f}{\\partial x_{k}}$ is defined."
+    "We can interpret $\\frac{\\partial f}{\\partial x_{k}}$ as the function, that maps any point $x \\in \\mathbb{R^n}$ in the partial derivative $\\frac{\\partial f}{\\partial x_{k}}$ calculated in the point (for such $x \\in \\mathbb{R}^{n}$, in which $\\frac{\\partial f}{\\partial x_{k}}$ is defined.  \n",
+    "  \n",
+    "**Properties of a Partial Derivative as a function**.  \n",
+    "Let the peartial deriavatives are defined for the functions $f$ and $g$. Then for the partial derivative the following conditioans are true as for the usual derivative:  \n",
+    "1. For the function $f+g$ is defined the partial derivative of $x_k$ and $\\frac{\\partial(f+g)}{\\partial x_{k}}=\\frac{\\partial f}{\\partial x_{k}}+\\frac{\\partial g}{\\partial x_{k}}$.  \n",
+    "2. Fot the function $cf$ is defined the partial derivative of $x_k$ and $\\frac{\\partial(c f)}{\\partial x_{k}}=c \\frac{\\partial f}{\\partial x_{k}}$, where $c \\in \\mathbb{R}$.  \n",
+    "3. For the function $fg$ is defined the partial derivative of $x_k$ and $\\frac{\\partial(f g)}{\\partial x_{k}}=\\frac{\\partial f}{\\partial x_{k}} g+f \\frac{\\partial g}{\\partial x_{k}}$.  \n",
+    "4. For the function $c$ partial derivative for $x_k$ is equal zero.\n",
+    "\n"
    ]
   }
  ],
