Adding the first info about Direction Vector and Gradient

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -130,6 +130,15 @@
     "4. For the function $c$ partial derivative for $x_k$ is equal zero.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Direction Vector and Gradient \n",
+    "The vector of length 1 is called a Direction Vector.\n",
+    "We introduce the notation for a vector $a:=\\left(a_{1}, \\ldots, a_{n}\\right)$. Consequently, the length of the vector is equal $\\|a\\|=$ $\\sqrt{a_{1}^{2}+\\cdots+a_{n}^{2}}$."
+   ]
   }
  ],
  "metadata": {
