Adding the final info about Direction Vector and Gradient

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -137,7 +137,14 @@
    "source": [
     "### Direction Vector and Gradient \n",
     "The vector of length 1 is called a Direction Vector.\n",
-    "We introduce the notation for a vector $a:=\\left(a_{1}, \\ldots, a_{n}\\right)$. Consequently, the length of the vector is equal $\\|a\\|=$ $\\sqrt{a_{1}^{2}+\\cdots+a_{n}^{2}}$."
+    "We introduce the notation for a vector $a:=\\left(a_{1}, \\ldots, a_{n}\\right)$. Consequently, the length of the vector is equal $\\|a\\|=$ $\\sqrt{a_{1}^{2}+\\cdots+a_{n}^{2}}$.\n",
+    "**Theorem**.  \n",
+    "Among the all Direction Vectors $\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)$ the function $d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=a_{1} \\Delta x_{1}+\\cdots+a_{n} \\Delta x_{n}$ reach the mimimal value in the Direction Vector $\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=\\left(\\frac{-a_{1}}{\\|a\\|}, \\frac{-a_{2}}{\\|a\\|}, \\ldots, \\frac{-a_{n}}{\\|a\\|}\\right)=-\\frac{a}{\\|a\\|}$. In addition rely on the previous Theorem $a_{k}=\\frac{\\partial f}{\\partial x_{k}}$.  \n",
+    "Direction Vector of nonzero vector $a$ is called the vector $\\frac{a}{\\|a\\|}$.  \n",
+    "The vector   \n",
+    "$\\nabla f(x):=\\left(\\frac{\\partial f}{\\partial x_{1}}, \\frac{\\partial f}{\\partial x_{2}}, \\ldots, \\frac{\\partial f}{\\partial x_{n}}\\right)$  \n",
+    "is called $Gradient$ of the function $f$ in the point $x$.\n",
+    "So, the theorem says that Direction Vector is opposite to the Direction Vector of Gradient is the Direction Vector of the fastest decreasing of the function. In other words the step of Gradient Descent should be taken against the Vector Direction of the Gradient. That is it should be taken in the Vector Direction $(-\\nabla f(x))$."
    ]
   }
  ],
