fix typos and the style for calculus

--- a/calculus/gradient_descent.ipynb
+++ b/calculus/gradient_descent.ipynb
@@ -50,7 +50,7 @@
     "### Differential  \n",
     "• The functions of the form $a_1\\Delta x_1+\\cdots +a_n\\Delta x_n$ are called $linear functions$ from ($\\Delta x_1,...,\\Delta x_n$)  \n",
     "• The equation $a_1(\\Delta x_1+\\cdots + a_n\\Delta)$ is called the linear increment of function $f1$.  \n",
-    "• The function $g(x_1+\\Delta x1,...,x_n+\\Delta x_n)=f(x_1,...,x_n)+a_1\\Delta x_1 +\\cdots +a_n \\Delta x_n$ is called $linear approximation$ of function $f$ in the point $x$.  \n",
+    "• The function $g(x_1+\\Delta x1,...,x_n+\\Delta x_n)=f(x_1,...,x_n)+a_1\\Delta x_1 +\\cdots +a_n \\Delta x_n$ is called $linear\\  approximation$ of function $f$ in the point $x$.  \n",
     "\n",
     "**The unformal definition of Differential**  \n",
     "$f(x_1+\\Delta x_1,...,x_n+\\Delta x_n)-f(x_1,...,x_n)\\approx d_xf(\\Delta x_1,...,\\Delta x_n):=a_1\\Delta x_1+\\cdots +a_n\\Delta x_n$\n",
@@ -68,12 +68,12 @@
     "$\n",
     "\n",
     "Where $x, \\Delta x$ and $(x+\\Delta x)$ are vectors from $n$ variables. 0 in the equation $\\lim _{\\Delta x \\rightarrow 0}$ is a shorthand notation of the vector (0,...,0). 0 in the right part of the equation is a simple variable $0 \\in R$ (not a vector).  \n",
-    "If there is a Differential in the point $x$ for function $f$, then the function is called $differentiable\\ at\\ point\\ x$.  \n",
-    "The function $f$ is called $differentiable$, if it is differentiable in the all points of its domain of definition.\n",
-    "**Properties of Differentials**  \n",
+    "If there is a Differential in the point $x$ for function $f$, then the function is called $differentiable\\ at\\ the\\  point\\ x$.  \n",
+    "The function $f$ is called $differentiable$, if it is differentiable in the all points of its domain of definition.  \n",
+    "**Properties of Differentials:**  \n",
     "1. **Uniqueness of the Differential.**  \n",
     "Let the function $f$ is a function from many variables. If there is Differential of the function $f$ in the point $x$, then the Differential is unique.  \n",
-    "2. **Differential of constant multiple**  \n",
+    "2. **Differential of constant multiple.**  \n",
     "Let $f$ is differentiable in the point $x$. Then for any number $c \\in R$ the function $f$ is differentiable in the point $x$, and  \n",
     "$d_{x}(c f)=c \\cdot d_{x} f$  \n",
     "3. **Differential of a sum.**  \n",
@@ -83,11 +83,11 @@
     "Let $f$ and $g$ are differentiable in the point $x$. Then the function $f \\cdot g$ is differentiable in the point $x$, and  \n",
     "$d_{x}(f \\cdot g)=f(x) \\cdot d_{x} g+g(x) \\cdot d_{x} f .$  \n",
     "NB, that in this equation $f(x)$ and $g(x)$ are numbers, because the point $x$ is fixed.  \n",
-    "5. **Differential of the quotient**.  \n",
+    "5. **Differential of the quotient.**  \n",
     "Let $f$ and $g$ are differentiable in the point $x$. Let $g$ is defined and is not equal zero in the neighbourhood of the point $x$. Then the function $\\frac{f}{g}$ is differentiable in the point $x$, and  \n",
     "$d_{x}\\left(\\frac{f}{g}\\right)=\\frac{g(x) \\cdot d_{x} f-f(x) \\cdot d_{x} g}{g(x)^{2}}$.  \n",
     "NB, that in this equation $f(x)$ and $g(x)$ are numbers, because the point $x$ is fixed.  \n",
-    "6. **Differential of the complex function**.  \n",
+    "6. **Differential of the complex function.**  \n",
     "Let $f$ is the function of one variable and $g$ is the function of $n$ variables. Then $f(g(x))$ is a function of $n$ variables. Let $g$ is differentiable in the point $x$ and there is derivative for $f$ in the point $g(x)$. Then function $f(g(x))$ is differentiable in the point $x$ and its differential is equal  \n",
     "$f^{\\prime}(g(x)) \\cdot d_{x} g$.  \n",
     "NB, that in this equation $f(g(x))$ is a number.\n",
@@ -100,7 +100,7 @@
    "metadata": {},
    "source": [
     "### Partial Derivative\n",
-    "Let be the function $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ and the point $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$. Then $the Partial Derivative$ of the $k$-th coordinate is the limit  \n",
+    "Let be the function $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ and the point $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$. Then $the\\ Partial\\ Derivative$ of the $k$-th coordinate is the limit  \n",
     "$\\frac{\\partial f}{\\partial x_{k}}:=\\lim _{t \\rightarrow 0} \\frac{f\\left(x_{1}, \\ldots, x_{k}+\\Delta x_{k}, \\ldots, x_{n}\\right)-f\\left(x_{1}, \\ldots, x_{k}, \\ldots, x_{n}\\right)}{\\Delta x_{k}}$\n",
     "When calculating of the Partial Derivative of $x_k$ it can be considered all the other variables in the formula as constants. In other words it can be considered as this algorithm:  \n",
     "1. In the formula for $f$ put the specific values for all the coordinates except $k$-th. that is we put the follwing $(n-1)$ values such as the first coordinate of the point $x$, the second coordinate of the point $x$ and so on, all the except $k$-th coordinate of the point $x$. The resulting function from one variable (from the variable $x_k$).  \n",
@@ -137,7 +137,8 @@
    "source": [
     "### Direction Vector and Gradient \n",
     "The vector of length 1 is called a Direction Vector.\n",
-    "We introduce the notation for a vector $a:=\\left(a_{1}, \\ldots, a_{n}\\right)$. Consequently, the length of the vector is equal $\\|a\\|=$ $\\sqrt{a_{1}^{2}+\\cdots+a_{n}^{2}}$.\n",
+    "We introduce the notation for a vector $a:=\\left(a_{1}, \\ldots, a_{n}\\right)$. Consequently, the length of the vector is equal $\\|a\\|=$ $\\sqrt{a_{1}^{2}+\\cdots+a_{n}^{2}}$.  \n",
+    "\n",
     "**Theorem**.  \n",
     "Among the all Direction Vectors $\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)$ the function $d_{x} f\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=a_{1} \\Delta x_{1}+\\cdots+a_{n} \\Delta x_{n}$ reach the mimimal value in the Direction Vector $\\left(\\Delta x_{1}, \\ldots, \\Delta x_{n}\\right)=\\left(\\frac{-a_{1}}{\\|a\\|}, \\frac{-a_{2}}{\\|a\\|}, \\ldots, \\frac{-a_{n}}{\\|a\\|}\\right)=-\\frac{a}{\\|a\\|}$. In addition rely on the previous Theorem $a_{k}=\\frac{\\partial f}{\\partial x_{k}}$.  \n",
     "Direction Vector of nonzero vector $a$ is called the vector $\\frac{a}{\\|a\\|}$.  \n",
