adding info about a vector space

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -6,7 +6,19 @@
    "source": [
     "### Vector Space  \n",
     "A vector is the ordered set of real numbers. In Machine Learning objects are often replaced to feature vectors of the objects.  \n",
-    "$\\mathbb{R}^{n}$ is the set of ordered sets $\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right)$ such as $\\forall i: x_{i} \\in \\mathbb{R}$. The set $\\mathbb{R}^{n}$ is called $a\\ Vector\\ Space$.\n",
+    "$\\mathbb{R}^{n}$ is the set of ordered sets $\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right)$ such as $\\forall i: x_{i} \\in \\mathbb{R}$. The set $\\mathbb{R}^{n}$ is called $a\\ Vector\\ Space$.  \n",
+    "**Convention.**  \n",
+    "We will denote such vector as a leter with an arrow and all its coordinates as letters with indexes. \n",
+    "$\\vec{x}=\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right)$.  \n",
+    "Sometimes it is better to represent some vectors not as row $\\vec{y}=\\left(y_{1}, \\ldots, y_{m}\\right)$, but as a column:  \n",
+    "$\\vec{y}=\\left(\\begin{array}{c}\n",
+    "y_{1} \\\\\n",
+    "y_{2} \\\\\n",
+    "\\vdots \\\\\n",
+    "y_{m}\n",
+    "\\end{array}\\right)$\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
