adding the final info about a vector space

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -4,9 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://www.math.toronto.edu/gscott/WhatVS.pdf  \n",
+    "\n",
     "### Vector Space  \n",
     "A vector is the ordered set of real numbers. In Machine Learning objects are often replaced to feature vectors of the objects.  \n",
     "$\\mathbb{R}^{n}$ is the set of ordered sets $\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right)$ such as $\\forall i: x_{i} \\in \\mathbb{R}$. The set $\\mathbb{R}^{n}$ is called $a\\ Vector\\ Space$.  \n",
+    "\n",
     "**Convention.**  \n",
     "We will denote such vector as a leter with an arrow and all its coordinates as letters with indexes. \n",
     "$\\vec{x}=\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right)$.  \n",
@@ -16,8 +19,19 @@
     "y_{2} \\\\\n",
     "\\vdots \\\\\n",
     "y_{m}\n",
-    "\\end{array}\\right)$\n",
+    "\\end{array}\\right)$  \n",
     "\n",
+    "**Vector Addition in $\\mathbb{R}^{\\mathbf{n}}$.**  \n",
+    "It is possible to add any two vectors in one Vector Space $\\mathbb{R}^{\\mathbf{n}}$. The result of the addition is another vector in $\\mathbb{R}^{\\mathbf{n}}$. The sum of vectors $\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right),\\left(y_{1}, y_{2}, \\ldots, y_{n}\\right) \\in$ $\\mathbb{R}^{n}$ is:  \n",
+    "$\n",
+    "\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right)+\\left(y_{1}, y_{2}, \\ldots, y_{n}\\right)=\\left(x_{1}+y_{1}, x_{2}+y_{2}, \\ldots, x_{n}+y_{n}\\right) \\in \\mathbb{R}^{n}.\n",
+    "$  \n",
+    "\n",
+    "**Scalar Multiplication.**  \n",
+    "Scalar Multiplication is defined in $\\mathbb{R}^{n}$. Any vector in $\\mathbb{R}^{n}$ can be multiply to any number and the result of multiplication is another vector in $\\mathbb{R}^{n}$. The number is called as Scalar. The multiplication of vector $\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right) \\in \\mathbb{R}^{n}$ to a number $c \\in \\mathbb{R}$ is defined as:  \n",
+    "$\n",
+    "c\\left(x_{1}, x_{2}, \\ldots, x_{n}\\right)=\\left(c x_{1}, c x_{2}, \\ldots, c x_{n}\\right) \\in \\mathbb{R}^{n}.\n",
+    "$\n",
     "\n",
     "\n"
    ]
