adding the first info about Linear Maps

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -35,6 +35,18 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Maps\n",
+    "*The Linear Map* of the Vector Space $V$ to the Vector Space $W$ is called the function $f: V \\rightarrow W$ satisfied the follwoing conditions:  \n",
+    "1. $f(\\vec{x})+f(\\vec{y})=f(\\vec{x}+\\vec{y})$ for any $\\vec{x}, \\vec{y} \\in V$,  \n",
+    "2. $f(c \\vec{x})=c f(\\vec{x})$ for any $\\vec{x} \\in V$ and any number $c \\in \\mathbb{R}$.  \n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
