adding info about Linear Maps

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -43,9 +43,12 @@
     "### Linear Maps\n",
     "*The Linear Map* of the Vector Space $V$ to the Vector Space $W$ is called the function $f: V \\rightarrow W$ satisfied the follwoing conditions:  \n",
     "1. $f(\\vec{x})+f(\\vec{y})=f(\\vec{x}+\\vec{y})$ for any $\\vec{x}, \\vec{y} \\in V$,  \n",
-    "2. $f(c \\vec{x})=c f(\\vec{x})$ for any $\\vec{x} \\in V$ and any number $c \\in \\mathbb{R}$.  \n",
+    "2. $f(c \\vec{x})=c f(\\vec{x})$ for any $\\vec{x} \\in V$ and any number $c \\in \\mathbb{R}.$  \n",
     "\n",
-    "\n"
+    "**The common view of some Linear Maps.**  \n",
+    "1. Any Linear Map $f: \\mathbb{R} \\rightarrow \\mathbb{R}$ is defined by one number $f(1)$: that is $f(\\vec{x})=x \\cdot f(1)$.  \n",
+    "2. Any Linear Map $f: \\mathbb{R} \\rightarrow \\mathbb{R}^{m}$ is defined by a column with height $m$ consisting of numbers. This column is equal to $f(1)$. Then $f(\\vec{x})=x \\cdot f(1)$.  \n",
+    "3. Any Linear Map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ is defined by row with length $n$ consisting of numbers. \n"
    ]
   }
  ],
