--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -48,8 +48,30 @@
     "**The common view of some Linear Maps.**  \n",
     "1. Any Linear Map $f: \\mathbb{R} \\rightarrow \\mathbb{R}$ is defined by one number $f(1)$: that is $f(\\vec{x})=x \\cdot f(1)$.  \n",
     "2. Any Linear Map $f: \\mathbb{R} \\rightarrow \\mathbb{R}^{m}$ is defined by a column with height $m$ consisting of numbers. This column is equal to $f(1)$. Then $f(\\vec{x})=x \\cdot f(1)$.  \n",
-    "3. Any Linear Map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ is defined by row with length $n$ consisting of numbers. \n"
+    "3. Any Linear Map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ is defined by row with length $n$ consisting of numbers.  \n",
+    "\n",
+    "**Designation.**  \n",
+    "- $\\vec{e}_{1}:=(1,0,0, \\ldots, 0)$\n",
+    "- $\\vec{e}_{2}:=(0,1,0, \\ldots, 0)$\n",
+    "- $\\vdots$\n",
+    "- $\\vec{e}_{n}:=(0,0,0, \\ldots, 1)$  \n",
+    "\n",
+    "In other words the $i$-th coordinate of thevector $\\vec{e}_{i}$ is equal to one and all other coordinates are equal zero. Let us consider any vector $\\vec{x}=\\left(x_{1}, \\ldots, x_{n}\\right)$. By definition of the Vector Space $\\mathbb{R}^{n}$, it is done:  \n",
+    "$\\left(x_{1}, \\ldots, x_{n}\\right)=\\left(x_{1}, 0, \\ldots, 0\\right)+\\left(0, x_{2}, \\ldots, 0\\right)+\\cdots+\\left(0,0, \\ldots, x_{n}\\right)=x_{1} \\vec{e}_{1}+x_{2} \\vec{e}_{2}+\\cdots+x_{n} \\vec{e}_{n}$.  \n",
+    "\n",
+    "**Designation.**  \n",
+    "In such cases it is suggested that $\\vec{x}$ *is expressed* via vectors $\\vec{e}_{1}, \\ldots, \\vec{e}_{n}.$  \n",
+    "Let be the linaer map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ and for any $i f\\left(\\vec{e}_{i}\\right)=a_{i}$, where $a_{i} \\in \\mathbb{R}$. Then $f$ is defined by the set of values $a_{1}, \\ldots, a_{n}: f(\\vec{x})=f\\left(x_{1} \\vec{e}_{1}+\\cdots+x_{n} \\vec{e}_{n}\\right)=f\\left(x_{1} \\vec{e}_{1}\\right)+\\cdots+f\\left(x_{n} \\vec{e}_{n}\\right)=x_{1} f\\left(\\vec{e}_{1}\\right)+\\cdots+x_{n} f\\left(\\vec{e}_{n}\\right)=$ $x_{1} a_{1}+\\cdots+x_{n} a_{n}=a_{1} x_{1}+\\cdots+a_{n} x_{n}$.\n",
+    "Calculating the value of the function $f$ we are writing as $action$ of the row $\\left(a_{1}, \\ldots, a_{n}\\right)$ to the column $\\vec{x}$ :  \n",
+    "$f(\\vec{x})=\\left(a_{1}, \\ldots, a_{n}\\right)\\left(\\begin{array}{c}x_{1} \\\\ x_{2} \\\\ \\vdots \\\\ x_{n}\\end{array}\\right):=a_{1} x_{1}+\\cdots+a_{n} x_{n}=\\sum_{i=1}^{n} a_{i} x_{i}$.\n",
+    "We can tell that we *multiply* the row $\\left(a_{1}, \\ldots, a_{n}\\right)$ to the column $\\left(\\begin{array}{c}x_{1} \\\\ x_{2} \\\\ \\vdots \\\\ x_{n}\\end{array}\\right).$\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
