adding the fisrt info about Matrices

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -71,7 +71,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Matrices  \n",
+    "Any Linear Map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}^{m}$ is represented with $m$ rows and $n$ columns.  \n",
+    "$A:=\\left(\\begin{array}{cccc}a_{11} & a_{12} & \\ldots & a_{1 n} \\\\ a_{21} & a_{22} & \\ldots & a_{2 n} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ a_{m 1} & a_{m 2} & \\ldots & a_{m n}\\end{array}\\right)$,  \n",
+    "where $a_{i j} \\in \\mathbb{R}$ for all the $i,j$. Numbers $a_{ij}$ are called the $elements$ of matrices.\n"
+   ]
   }
  ],
  "metadata": {
