adding info about Matrices

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -81,7 +81,13 @@
     "The Linar Map $f_{i}: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}$ corresponds to the $i$-th row of the matrix ( $a_{i 1}, a_{i 2}, \\ldots, a_{i n}$ ):  \n",
     "$f_{i}(\\vec{x})=\\left(a_{i 1}, a_{i 2} \\ldots, a_{i n}\\right)\\left(\\begin{array}{c}x_{1} \\\\ x_{2} \\\\ \\vdots \\\\ x_{n}\\end{array}\\right):=a_{i 1} x_{1}+a_{i 2} x_{2}+\\cdots+a_{i n} x_{n}=\\sum_{j=1}^{n} a_{i j} x_{j} \\in \\mathbb{R}$.  \n",
     "Using maps $f_{1}, \\ldots, f_{m}$, we define the action(?) of map $f$ on the vector $\\vec{x}$ :  \n",
-    "$f(\\vec{x})=\\left(\\begin{array}{c}f_{1}(\\vec{x}) \\\\ f_{2}(\\vec{x}) \\\\ \\vdots \\\\ f_{m}(\\vec{x})\\end{array}\\right)=\\left(\\begin{array}{c}\\sum_{j=1}^{n} a_{1 j} x_{j} \\\\ \\sum_{j=1}^{n} a_{2 j} x_{j} \\\\ \\vdots \\\\ \\sum_{j=1}^{n} a_{m j} x_{j}\\end{array}\\right) \\in \\mathbb{R}^{m}$"
+    "$f(\\vec{x})=\\left(\\begin{array}{c}f_{1}(\\vec{x}) \\\\ f_{2}(\\vec{x}) \\\\ \\vdots \\\\ f_{m}(\\vec{x})\\end{array}\\right)=\\left(\\begin{array}{c}\\sum_{j=1}^{n} a_{1 j} x_{j} \\\\ \\sum_{j=1}^{n} a_{2 j} x_{j} \\\\ \\vdots \\\\ \\sum_{j=1}^{n} a_{m j} x_{j}\\end{array}\\right) \\in \\mathbb{R}^{m}$.  \n",
+    "\n",
+    "**Representation.**  \n",
+    "Resulting vector $f(\\vec{x})$ is called the result of *action(?)* of the matrix *A* on the vector $\\vec{x}$, and denoted $A \\vec{x}$.  \n",
+    "The action of the matrix on the vector $\\vec{x}$ is written this way: \n",
+    "$A \\vec{x}=\\left(\\begin{array}{cccc}a_{11} & a_{12} & \\ldots & a_{1 n} \\\\ a_{21} & a_{22} & \\ldots & a_{2 n} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ a_{m 1} & a_{m 2} & \\ldots & a_{m n}\\end{array}\\right)\\left(\\begin{array}{c}x_{1} \\\\ x_{2} \\\\ \\vdots \\\\ x_{m}\\end{array}\\right)=\\left(\\begin{array}{c}\\sum_{j=1}^{n} a_{1 j} x_{j} \\\\ \\sum_{j=1}^{n} a_{2 j} x_{j} \\\\ \\vdots \\\\ \\sum_{j=1}^{n} a_{m j} x_{j}\\end{array}\\right) \\in \\mathbb{R}^{m}$\n",
+    "Also we can say that we *multiplied* *A* to $\\vec{x}$ and got $A \\vec{x}$."
    ]
   }
  ],
