adding info about Matrices

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -88,10 +88,12 @@
     "The action of the matrix on the vector $\\vec{x}$ is written this way: \n",
     "$A \\vec{x}=\\left(\\begin{array}{cccc}a_{11} & a_{12} & \\ldots & a_{1 n} \\\\ a_{21} & a_{22} & \\ldots & a_{2 n} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ a_{m 1} & a_{m 2} & \\ldots & a_{m n}\\end{array}\\right)\\left(\\begin{array}{c}x_{1} \\\\ x_{2} \\\\ \\vdots \\\\ x_{m}\\end{array}\\right)=\\left(\\begin{array}{c}\\sum_{j=1}^{n} a_{1 j} x_{j} \\\\ \\sum_{j=1}^{n} a_{2 j} x_{j} \\\\ \\vdots \\\\ \\sum_{j=1}^{n} a_{m j} x_{j}\\end{array}\\right) \\in \\mathbb{R}^{m}$\n",
     "Also we can say that we *multiplied* *A* to $\\vec{x}$ and got $A \\vec{x}$.  \n",
+    "\n",
     "**How to interpret the columns of the matrix:**  \n",
     "For any *j* vector $f\\left(\\vec{e}_{j}\\right)=A \\vec{e}_{j}$ is identical with *j*-th column of the matrix *A*. Then the columns of the matrix are the vectors that are transmitted by *f* using unit vectors, that are oriented along the axes.  \n",
     "$A=\\left(\\begin{array}{llll}f\\left(\\vec{e}_{1}\\right) & f\\left(\\vec{e}_{2}\\right) & \\ldots & f\\left(\\vec{e}_{n}\\right)\\end{array}\\right)$  \n",
     "\n",
+    "So, any matrix defines a map. In addition any linear map is represented by some matrix. Moreover different matrices define different linear maps. It means there is only one map between matrices and linear maps. That is each matrix corresponds only one linear map and each linear map corresponds to only one matrix.\n",
     "\n"
    ]
   }
