adding info about Matrices

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -96,6 +96,17 @@
     "So, any matrix defines a map. In addition any linear map is represented by some matrix. Moreover different matrices define different linear maps. It means there is only one map between matrices and linear maps. That is each matrix corresponds only one linear map and each linear map corresponds to only one matrix.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrices Multiplication\n",
+    "Let be two linear maps: $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}^{m}$ and $g: \\mathbb{R}^{m} \\rightarrow \\mathbb{R}^{k}$.  \n",
+    "The map from $\\mathbb{R}^{n}$ to $\\mathbb{R}^{k}$ is called as their *composition* and it is represented as $g \\circ f$. $g \\circ f$ on the any vector $\\vec{x} \\in \\mathbb{R}^{n}$ is:  \n",
+    "1. applying *f* we get the vector $f(\\vec{x}) \\in \\mathbb{R}^{m}$  \n",
+    "2. applying to the obtained vector *g* we get the vector $g(f(\\vec{x})) \\in \\mathbb{R}^{k}$"
+   ]
   }
  ],
  "metadata": {
