adding info about Matrices

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -105,7 +105,10 @@
     "Let be two linear maps: $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}^{m}$ and $g: \\mathbb{R}^{m} \\rightarrow \\mathbb{R}^{k}$.  \n",
     "The map from $\\mathbb{R}^{n}$ to $\\mathbb{R}^{k}$ is called as their *composition* and it is represented as $g \\circ f$. $g \\circ f$ on the any vector $\\vec{x} \\in \\mathbb{R}^{n}$ is:  \n",
     "1. applying *f* we get the vector $f(\\vec{x}) \\in \\mathbb{R}^{m}$  \n",
-    "2. applying to the obtained vector *g* we get the vector $g(f(\\vec{x})) \\in \\mathbb{R}^{k}$"
+    "2. applying to the obtained vector *g* we get the vector $g(f(\\vec{x})) \\in \\mathbb{R}^{k}$  \n",
+    "The vector $g(f(\\vec{x})) \\in \\mathbb{R}^{k}$ is called the result of the action $g \\circ f$ to $\\vec{x}$.  \n",
+    "The composition of the two linear transformation is a linear transformation as well.  \n",
+    "If the map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}^{m}$ is defined by the matrix *A* and the map $g: \\mathbb{R}^{m} \\rightarrow \\mathbb{R}^{k}$ by the matrix *B* then  $(g \\circ f)(\\vec{x})=g(f(\\vec{x}))=g(A(\\vec{x}))=B(A(\\vec{x}))$. The matrix of transformation $g \\circ f$ is represented $B A$ and it is called *Matrices Multiplication* of the matrix *B* and the matrix *A*."
    ]
   }
  ],
