adding the final info about Matrices

--- a/linear_algebra/linear_maps_and_matrices.ipynb
+++ b/linear_algebra/linear_maps_and_matrices.ipynb
@@ -107,8 +107,20 @@
     "1. applying *f* we get the vector $f(\\vec{x}) \\in \\mathbb{R}^{m}$  \n",
     "2. applying to the obtained vector *g* we get the vector $g(f(\\vec{x})) \\in \\mathbb{R}^{k}$  \n",
     "The vector $g(f(\\vec{x})) \\in \\mathbb{R}^{k}$ is called the result of the action $g \\circ f$ to $\\vec{x}$.  \n",
+    "\n",
     "The composition of the two linear transformation is a linear transformation as well.  \n",
-    "If the map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}^{m}$ is defined by the matrix *A* and the map $g: \\mathbb{R}^{m} \\rightarrow \\mathbb{R}^{k}$ by the matrix *B* then  $(g \\circ f)(\\vec{x})=g(f(\\vec{x}))=g(A(\\vec{x}))=B(A(\\vec{x}))$. The matrix of transformation $g \\circ f$ is represented $B A$ and it is called *Matrices Multiplication* of the matrix *B* and the matrix *A*."
+    "\n",
+    "If the map $f: \\mathbb{R}^{n} \\rightarrow \\mathbb{R}^{m}$ is defined by the matrix *A* and the map $g: \\mathbb{R}^{m} \\rightarrow \\mathbb{R}^{k}$ by the matrix *B* then  $(g \\circ f)(\\vec{x})=g(f(\\vec{x}))=g(A(\\vec{x}))=B(A(\\vec{x}))$. The matrix of transformation $g \\circ f$ is represented $B A$ and it is called *Matrices Multiplication* of the matrix *B* and the matrix *A*.\n",
+    "\n",
+    "**The rule of Matrices Multiplication**  \n",
+    "To perform matrix multiplication, the first matrix must have the same number of columns as the second matrix has rows. The number of rows of the resulting matrix equals the number of rows of the first matrix, and the number of columns of the resulting matrix equals the number of columns of the second matrix. So a 3 × 5 matrix could be multiplied by a 5 × 7 matrix, forming a 3 × 7 matrix, but one cannot multiply a 2 × 8 matrix with a 4 × 2 matrix. To find the entries in the resulting matrix, simply take the dot product of the corresponding row of the first matrix and the corresponding column of the second matrix.\n",
+    "\n",
+    "Matrix multiplication has some of the same properties as \"normal\" multiplication , such as  \n",
+    "$A(BC)=(AB)C$  \n",
+    "$A(B+C)=AB+AC$  \n",
+    "$(A+B)C=AC+BC$\n",
+    "\n",
+    "However matrix multiplication is not commutative. That is to say $A*B$ does not necessarily equal $B*A$. In fact, $B*A$ often has no meaning since the dimensions rarely match up. However, you can take the transpose of matrix multiplication. In that case $(AB)^T=B^T A^T$"
    ]
   }
  ],
