adding info about neural networks

--- a/linear_algebra/spaces_basises_rank.ipynb
+++ b/linear_algebra/spaces_basises_rank.ipynb
@@ -24,7 +24,18 @@
     "\n",
     "Let's consider the simplest neural network:  \n",
     "the input layer $x_{1}, x_{2}, \\ldots, x_{m}$ and one neuron *y* in the output layer.  \n",
-    "![spaces_basises_rank_2.jpg](attachment:spaces_basises_rank_2.jpg)\n",
+    "![spaces_basises_rank_2.jpg](attachment:spaces_basises_rank_2.jpg)  \n",
+    "A neural network with the *linear* connection working as follows: $y=w_{1} x_{1}+w_{2} x_{2}+\\cdots+w_{m} x_{m}=\\sum_{i=1}^{m} w_{i} x_{i}$. That is the same using Matrices Multiplication:  \n",
+    "$\n",
+    "y=\\left(\\begin{array}{llll}\n",
+    "w_{1} & w_{2} & \\ldots & w_{m}\n",
+    "\\end{array}\\right)\\left(\\begin{array}{c}\n",
+    "x_{1} \\\\\n",
+    "x_{2} \\\\\n",
+    "\\vdots \\\\\n",
+    "x_{m}\n",
+    "\\end{array}\\right)\n",
+    "$\n",
     "\n"
    ]
   }
