adding info about neural networks

--- a/linear_algebra/spaces_basises_rank.ipynb
+++ b/linear_algebra/spaces_basises_rank.ipynb
@@ -51,7 +51,10 @@
     "**One layer neural network**  \n",
     "![spaces_basises_rank_4.jpg](attachment:spaces_basises_rank_4.jpg)  \n",
     "Let be $x_{1}, x_{2}, \\ldots, x_{m}$ is the input of neural network and $y_{1}, y_{2}, \\ldots, y_{n}$ are the states of the first linear layer, this first linear layer is also the output of the neural network, $w_{i j}$ is the weight between *i*-th input neuron and *j*-th output neuron. So   \n",
-    "$\\left(\\begin{array}{c}y_{1} \\\\ y_{2} \\\\ \\vdots \\\\ y_{n}\\end{array}\\right)=\\left(\\begin{array}{c}w_{01}+\\sum_{i=1}^{m} w_{i 1} x_{i} \\\\ w_{02}+\\sum_{i=1}^{m} w_{i 2} x_{i} \\\\ \\vdots \\\\ w_{0 n}+\\sum_{i=1}^{m} w_{i n} x_{i}\\end{array}\\right)$"
+    "$\\left(\\begin{array}{c}y_{1} \\\\ y_{2} \\\\ \\vdots \\\\ y_{n}\\end{array}\\right)=\\left(\\begin{array}{c}w_{01}+\\sum_{i=1}^{m} w_{i 1} x_{i} \\\\ w_{02}+\\sum_{i=1}^{m} w_{i 2} x_{i} \\\\ \\vdots \\\\ w_{0 n}+\\sum_{i=1}^{m} w_{i n} x_{i}\\end{array}\\right)$  \n",
+    "Let *A* be a matrix $n \\times m$. The *transposed* matrix for *A* is the matrix *B* $m \\times n$ where $A_{i j}=B_{j i}$ for each $1 \\leqslant i \\leqslant n$ and $1 \\leqslant j \\leqslant m$. The transposed matrix is denotes as $A^{T}$.  \n",
+    "So, if $W:=\\left(\\begin{array}{cccc}w_{01} & w_{02} & \\ldots & w_{0 n} \\\\ w_{11} & w_{12} & \\ldots & w_{1 n} \\\\ w_{21} & w_{22} & \\ldots & w_{2 n} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ w_{m 1} & w_{m 2} & \\ldots & w_{m n}\\end{array}\\right)$ we get the formula $\\vec{y}=W^{T} \\vec{x}$, где $\\vec{x}=\\left(x_{1}, x_{2}, \\ldots, x_{m}\\right)^{T}$ and $\\vec{y}=\\left(y_{1}, y_{2}, \\ldots, y_{m}\\right)^{T}$.  \n",
+    "*The neural networks are called *equal* ???!!!???*"
    ]
   }
  ],
