adding info about neural networks

--- a/linear_algebra/spaces_basises_rank.ipynb
+++ b/linear_algebra/spaces_basises_rank.ipynb
@@ -58,7 +58,15 @@
     "Let *A* be a matrix $n \\times m$. The *transposed* matrix for *A* is the matrix *B* $m \\times n$ where $A_{i j}=B_{j i}$ for each $1 \\leqslant i \\leqslant n$ and $1 \\leqslant j \\leqslant m$. The transposed matrix is denotes as $A^{T}$.  \n",
     "So, if $W:=\\left(\\begin{array}{cccc}w_{01} & w_{02} & \\ldots & w_{0 n} \\\\ w_{11} & w_{12} & \\ldots & w_{1 n} \\\\ w_{21} & w_{22} & \\ldots & w_{2 n} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ w_{m 1} & w_{m 2} & \\ldots & w_{m n}\\end{array}\\right)$ we get the formula $\\vec{y}=W^{T} \\vec{x}$, где $\\vec{x}=\\left(x_{1}, x_{2}, \\ldots, x_{m}\\right)^{T}$ and $\\vec{y}=\\left(y_{1}, y_{2}, \\ldots, y_{m}\\right)^{T}$.  \n",
     "**Claim**. *N* linear layers in a row are equal to one linear layer. That is why there is non-linear function is applied to the states of the neurons. That is the *activation functions*.  \n",
-    "![spaces_basises_rank_5.jpg](attachment:spaces_basises_rank_5.jpg)"
+    "![spaces_basises_rank_5.jpg](attachment:spaces_basises_rank_5.jpg)  \n",
+    "Let's denote $\\vec{x}^{\\prime}=\\left(1, x_{1}, x_{2}, \\ldots, x_{m}\\right)^{T}$ as the input vector with bias neuron,  \n",
+    "$\\vec{h}=\\left(h_{1}, h_{2}, \\ldots, h_{k}\\right)^{T}-$ the vector of the  states of the hidden layer,  \n",
+    "$\\vec{a}=\\left(a_{1}, a_{2}, \\ldots, a_{k}\\right)^{T}$ - the vector of the states of the hidden layer after applying activation,  \n",
+    "$\\vec{a}^{\\prime}=\\left(1, a_{1}, a_{2}, \\ldots, a_{k}\\right)^{T}$ - the vector $\\vec{a}$ with the bias neuron,  \n",
+    "$\\vec{y}=\\left(y_{1}, y_{2}, \\ldots, y_{n}\\right)^{T}-$ the output of the neural network,  \n",
+    "$W$ - the matrix of the weights of the second linear layer, its size is  $k \\times(m+1)$,  \n",
+    "$U$ - the matrix of the weights of the second linear layer, its size is $n \\times(k+1)$,  \n",
+    "$f$ - the activation function applyed between the first linear layer and the second linear layer."
    ]
   }
  ],
