adding info about neural networks

--- a/linear_algebra/spaces_basises_rank.ipynb
+++ b/linear_algebra/spaces_basises_rank.ipynb
@@ -66,7 +66,13 @@
     "$\\vec{y}=\\left(y_{1}, y_{2}, \\ldots, y_{n}\\right)^{T}-$ the output of the neural network,  \n",
     "$W$ - the matrix of the weights of the second linear layer, its size is  $k \\times(m+1)$,  \n",
     "$U$ - the matrix of the weights of the second linear layer, its size is $n \\times(k+1)$,  \n",
-    "$f$ - the activation function applyed between the first linear layer and the second linear layer."
+    "$f$ - the activation function applyed between the first linear layer and the second linear layer.\n",
+    "The neural network with one hidden layer and one activation works as follows:\n",
+    "- Based on the input we calculte the states of the hidden layer: $\\vec{h}=W^{T} \\vec{x}^{\\prime}$  \n",
+    "- To each component of the vector $\\vec{h}$ it is applied the activation function *f* and we get the vector $\\vec{a}$ : $a_{i}=f\\left(h_{i}\\right)$  \n",
+    "- Based on the states of the hidden layer with the bias neuron we calculte the output of the neural network:  $U^{T} \\vec{a}^{\\prime}$ \n",
+    " \n",
+    "*The Perceptron* is the neural network with only one hidden layer. The first and the second layers are linear and there is the activation function between them. The output is only one."
    ]
   }
  ],
