adding info about neural networks

--- a/linear_algebra/spaces_basises_rank.ipynb
+++ b/linear_algebra/spaces_basises_rank.ipynb
@@ -72,7 +72,16 @@
     "- To each component of the vector $\\vec{h}$ it is applied the activation function *f* and we get the vector $\\vec{a}$ : $a_{i}=f\\left(h_{i}\\right)$  \n",
     "- Based on the states of the hidden layer with the bias neuron we calculte the output of the neural network:  $U^{T} \\vec{a}^{\\prime}$ \n",
     " \n",
-    "*The Perceptron* is the neural network with only one hidden layer. The first and the second layers are linear and there is the activation function between them. The output is only one."
+    "*The Perceptron* is the neural network with only one hidden layer. The first and the second layers are linear and there is the activation function between them. The output is only one.  \n",
+    "**Theorem.**  \n",
+    "Any continuous function of many variables can be approximated by the perceptron with sigmoid activation function with any defined accuracy. The example of the sigmoid activation function is $f(x)=\\frac{1}{1+e^{-x}}$.  \n",
+    "**The examples of the activation functions.**  \n",
+    "1. $\\operatorname{ReLU}=\\max (0, x)$\n",
+    "\n",
+    "2. Leaky $\\operatorname{ReLU}= \\begin{cases}x, & \\text { if } x>0 \\\\ 0.01 x, & \\text { else }\\end{cases}$  \n",
+    "3. $\\tanh (x)=\\frac{e^{x}-e^{-x}}{e^{x}+e^{-x}}-$ hyperbolic tangent  \n",
+    "4. $\\sigma(x)=\\frac{1}{1+e^{-x}}$ sigmoid (logistic) activation function  \n",
+    "5. $\\operatorname{Softmax}\\left(z_{1}, z_{2}, \\ldots, z_{n}\\right)=\\left(\\frac{e^{z_{1}}}{\\sum_{i=1}^{n} e^{z_{i}}}, \\frac{e^{z_{2}}}{\\sum_{i=1}^{n} e^{z_{i}}}, \\ldots, \\frac{e^{z_{n}}}{\\sum_{i=1}^{n} e^{z_{i}}}\\right)$  \n"
    ]
   }
  ],
