adding info about Subspaces and Linear Combinations

--- a/linear_algebra/spaces_basises_rank.ipynb
+++ b/linear_algebra/spaces_basises_rank.ipynb
@@ -89,6 +89,14 @@
     "Neural network with many layers are built using the same principles such as sequential matrices multiplication and applying activation functions. All of the layers except the zeros and the last layer are called as hidden layers.  \n",
     "![spaces_basises_rank_6.jpg](attachment:spaces_basises_rank_6.jpg)  \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subspace and linear combinations   \n",
+    "The *Linear combination* of the vectors $\\vec{a}_{1}, \\ldots, \\vec{a}_{k}$ is called any vector like this $\\lambda_{1} \\vec{a}_{1}+\\lambda_{2} \\vec{a}_{2}+\\cdots+\\lambda_{k} \\vec{a}_{k}$, where $\\lambda_{1}, \\ldots, \\lambda_{k} \\in \\mathbb{R}$."
+   ]
   }
  ],
  "metadata": {
