--- a/linear_algebra/spaces_basises_rank.ipynb
+++ b/linear_algebra/spaces_basises_rank.ipynb
@@ -95,7 +95,8 @@
    "metadata": {},
    "source": [
     "### Subspace and linear combinations   \n",
-    "The *Linear combination* of the vectors $\\vec{a}_{1}, \\ldots, \\vec{a}_{k}$ is called any vector like this $\\lambda_{1} \\vec{a}_{1}+\\lambda_{2} \\vec{a}_{2}+\\cdots+\\lambda_{k} \\vec{a}_{k}$, where $\\lambda_{1}, \\ldots, \\lambda_{k} \\in \\mathbb{R}$."
+    "The *Linear combination* of the vectors $\\vec{a}_{1}, \\ldots, \\vec{a}_{k}$ is called any vector like this $\\lambda_{1} \\vec{a}_{1}+\\lambda_{2} \\vec{a}_{2}+\\cdots+\\lambda_{k} \\vec{a}_{k}$, where $\\lambda_{1}, \\ldots, \\lambda_{k} \\in \\mathbb{R}$.  \n",
+    "Set *V* of all the linear combinations of the vectors $\\vec{a}_{1}, \\ldots, \\vec{a}_{k} \\in \\mathbb{R}^{n}$ is called a linear subspace, "
    ]
   }
  ],
